--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,5 +8,10 @@
 </head>
 <body>
   <h1>My Delicious Workout</h1>
+  <script type="script/javascript">
+    $(document).ready(function(){
+      alert('hello');
+    });
+  </script>
 </body>
 </html>
