Setting up layout

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -12,6 +12,37 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>My Delicious Workout</h1>  
+  <div class="container-fluid">
+    <h1>My Delicious Workouts</h1>  
+    
+    <div class="bd-example bd-example-row">      
+        <div class="row">
+          <div class="col-sm">
+            MONDAY
+          </div>
+          <div class="col-sm">
+            TUESDAY
+          </div>
+          <div class="col-sm">
+            WEDNESDAY
+          </div>
+          <div class="col-sm">
+            THURSDAY
+          </div>
+          <div class="col-sm">
+            FRIDAY
+          </div>
+          <div class="col-sm">
+            SATURDAY
+          </div>
+          <div class="col-sm">
+            SUNDAY
+          </div>
+        </div>
+    </div>
+
+
+  </div>
+  
 </body>
 </html>
