--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,31 +3,34 @@
   <div class="container-fluid">
     <h1>My Delicious Workouts</h1>  
     
-    <div class="bd-example bd-example-row">      
-        <div class="row">
-          <div class="col-sm">
-            <a href="/workout/monday">MONDAY</a>
-          </div>
-          <div class="col-sm">
-            TUESDAY
-          </div>
-          <div class="col-sm">
-            WEDNESDAY
-          </div>
-          <div class="col-sm">
-            THURSDAY
-          </div>
-          <div class="col-sm">
-            FRIDAY
-          </div>
-          <div class="col-sm">
-            SATURDAY
-          </div>
-          <div class="col-sm">
-            SUNDAY
-          </div>
+    <div class="list-group">
+      <a href="/workout/monday" class="list-group-item list-group-item-action flex-column align-items-start active">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">MONDAY</h5>
+          <small>6 Exercises</small>
         </div>
-    </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small>Donec id elit non mi porta.</small>
+      </a>
+
+      <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">TUESDAY</h5>
+          <small class="text-muted">3 days ago</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small class="text-muted">Donec id elit non mi porta.</small>
+      </a>
+
+      <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">WEDNESDAY</h5>
+          <small class="text-muted">3 days ago</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small class="text-muted">Donec id elit non mi porta.</small>
+      </a>
+    </div>    
   </div>
   
 {{> footer}}
