Setting up stylesheets

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,35 +1,60 @@
 {{> head}}
 <body>
   <div class="container-fluid">
-    <h1>My Delicious Workouts</h1>  
-    
+    <h1>My Delicious Workouts</h1>
+    <img src="images/cross_punch_boxing_main.jpg" style="max-width: 100%">
     <div class="list-group">
-      <a href="/workout/monday" class="list-group-item list-group-item-action flex-column align-items-start active">
+      {{!-- MONDAY --}}
+      <a href="/workout/monday" class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1">MONDAY</h5>
           <small>6 Exercises</small>
         </div>
-        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <p class="mb-1">4 different exercises, Shadow boxing, Heavy bag workout(Basic combinations) and a good Finisher.</p>
         <small>Donec id elit non mi porta.</small>
       </a>
 
+      {{!-- TUESDAY --}}
       <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1">TUESDAY</h5>
-          <small class="text-muted">3 days ago</small>
+          <small class="text-muted">6 Exercises</small>
         </div>
-        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <p class="mb-1">6 different exercises, Footwork drills(5 Rounds) and a cool Finisher.</p>
         <small class="text-muted">Donec id elit non mi porta.</small>
       </a>
 
+      {{!-- WEDNESDAY --}}
       <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between">
           <h5 class="mb-1">WEDNESDAY</h5>
-          <small class="text-muted">3 days ago</small>
+          <small class="text-muted">1 Exercise</small>
         </div>
-        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <p class="mb-1">Just warmup and long Shadow Boxing(5 Rounds, 3 mins each) and Bag workout plus Conditioning and Finisher.</p>
         <small class="text-muted">Donec id elit non mi porta.</small>
       </a>
+
+      {{!-- THURSDAY --}}
+      <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">THURSDAY</h5>
+          <small class="text-muted">3 days ago</small>
+        </div>
+        <p class="mb-1">Warmup, Shadow boxing and Burpees. End with Conditioning and Finisher. </p>
+        <small class="text-muted">Donec id elit non mi porta.</small>
+      </a>
+
+      {{!-- FRIDAY --}}
+      <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">FRIDAY</h5>
+          <small class="text-muted">3 days ago</small>
+        </div>
+        <p class="mb-1">Lets hit it hard before weekend. Start with warmup and Shadow boxing then 6 Rounds of Heavy Bag workout. End with strong jab & hooks and Finisher.</p>
+        <small class="text-muted">Donec id elit non mi porta.</small>
+      </a>
+
+
     </div>    
   </div>
   
