--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,8 @@
 {{> head}}
 <body>
   <div class="container-fluid">
-    <h1>My Delicious Workouts</h1>
+    <a href="/"><h2>My Delicious Workouts</h2></a>
+    
     <img src="images/cross_punch_boxing_main.jpg" style="max-width: 100%">
     <div class="list-group">
       {{!-- MONDAY --}}
