--- a/views/monday.hbs
+++ b/views/monday.hbs
@@ -1,7 +1,9 @@
 {{> head}}
 <body>
-  <div class="container-fluid">
-    <h2>Monday</h2>
+  <div class="container-fluid">    
+    <a href="/"><h2 class="text-center text-success">My Delicious Workouts</h2></a>
+    
+    <h3 class="text-center">{{day}}</h3>
   </div>
 
 {{> footer}}
