First workout page content

--- a/views/monday.hbs
+++ b/views/monday.hbs
@@ -4,6 +4,50 @@
     <a href="/"><h2 class="text-center text-success">My Delicious Workouts</h2></a>
     
     <h3 class="text-center">{{day}}</h3>
+
+    {{!-- Warmup --}}
+    <div class="card" style="width: 20rem;">
+      <img class="card-img-top" src="/images/warmup.jpeg" alt="Card image cap">
+      <div class="card-body" style="padding: 5px">
+        <h4 class="card-title">Warmup</h4>
+        <p class="card-text">
+          <ul>
+            <li>10 minutes jump rope</li>
+            <li>20 squats</li>
+            <li>20 pushups</li>
+            <li>40 crunches</li>
+          </ul>
+        </p>        
+      </div>
+    </div>
+
+    {{!-- Shadow Boxing --}}
+    <div class="card" style="width: 20rem;">
+      <img class="card-img-top" src="/images/Shadow-Box.jpg" alt="Card image cap">
+      <div class="card-body" style="padding: 5px">
+        <h4 class="card-title">Shadow Boxing</h4>
+        <p class="card-text">
+          3-minute round: Basic jab, cross, and hook punches<br>
+          Rest 30 seconds<br>
+          x5 Rounds
+        </p>        
+      </div>
+    </div>
+    <br>
+
+    {{!-- Heavy Bag Workout --}}
+    <div class="card" style="width: 20rem;">
+      <img class="card-img-top" src="/images/heavybag-workout.jpg" alt="Card image cap">
+      <div class="card-body" style="padding: 5px">
+        <h4 class="card-title">Heavy Bag Workout</h4>
+        <p class="card-text">
+          3-minute round<br>
+          Rest 30 seconds<br>
+          x5 Rounds
+        </p>        
+      </div>
+    </div>
+
   </div>
 
 {{> footer}}
